--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/your-styles.css">
+  <link rel="stylesheet" href="css/global-bites.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -46,7 +45,9 @@
 
   </header>
 
-  <section class="">
+  <section class="hero"></section>
+
+  <section class="photos">
 
   </section>
 
@@ -57,27 +58,27 @@
   <section class="infographic">
 
   </section>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="columns three">
+              <a href="">Column 1</a>
+            </div>
+            <div class="columns three">
+              <a href="">Column 2</a>
+            </div>
+            <div class="columns three">
+              <a href="">Column 3</a>
+            </div>
+            <div class="columns three">
+              <a href="">Column 4</a>
+            </div>
+        </div><!--/.row-->
+    </div><!--/.container-->
 
-  <footer>
+</footer>
 
-  </footer>
 
-  <div class="container">
-    <div class="row">
-      <div class="one-third column">
-        <h4>Column 1</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-      </div>
-      <div class="one-third column">
-        <h4>Column 2</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-      </div>
-      <div class="one-third column">
-        <h4>Column 3</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-      </div>
-    </div>
-  </div>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
