--- a/index.html
+++ b/index.html
@@ -62,16 +62,56 @@
     <div class="container">
         <div class="row">
             <div class="columns three">
-              <a href="">Column 1</a>
+              <h2>Get the app</h2>
+              <img src="images/app-store-icon.png">
+              <img src="images/google-app-icon.png">
             </div>
             <div class="columns three">
-              <a href="">Column 2</a>
+              <h2>About</h2>
+              <ul>
+                <li>
+                  <a href="">Who We Are</a>
+                </li>
+
+                <li>
+                  <a href="">Our Mission</a>
+                </li>
+
+                <li>
+                  <a href="">FAQ</a>
+                </li>
+              </ul>
+            
+
             </div>
             <div class="columns three">
-              <a href="">Column 3</a>
+              <h2>Global Bites top cities</h2>
+              <ul>
+                <li>
+                  <a href="">View the map</a>
+                </li>
+
+                <li>
+                  <a href="">Choose your city</a>
+                </li>
+
+              </ul>
             </div>
             <div class="columns three">
-              <a href="">Column 4</a>
+              <h2>Connect</h2>
+              <ul>
+                <li>
+                  <a href="">Facebook</a>
+                </li>
+
+                <li>
+                  <a href="">Twitter</a>
+                </li>
+
+                <li>
+                  <a href="">Instagram</a>
+                </li>
+              </ul>
             </div>
         </div><!--/.row-->
     </div><!--/.container-->
