--- a/index.html
+++ b/index.html
@@ -56,8 +56,40 @@
   </section>
 
   <section class="infographic">
+    <div class="container">
+      <div class="row">
+        
+        <div class="columns four">
+          <img src="images/hungry-3x.png">
+          <h2>Hungry?</h2>
+          <img src="images/clock-3x.png">
+          <p>Order food Near you or<br/> by your favorite Cuisine</p>
+
+        </div>
+        <div class="columns four">
+          <img src="images/selection.png">
+          <h2>Make a selection</h2>
+          <img src="images/tap.png">
+          <p>Use our new Global Bites<br/>app to make your selection</p>
+          <a href="" class="button">Order Now</a> 
+
+        </div>
+        <div class="columns four">
+          <img src="images/delivered.png">
+          <h2>Fresh food delivered</h2>
+          <img src="images/checked.png">
+          <p>Relax and enjoy great food<br/>with friends and family</p>
+
+        </div>
+
+      </div>
+
+
+    </div>
+  
 
   </section>
+  
 <footer>
     <div class="container">
         <div class="row">
