infographic section_aligning2

--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@
         <div class="columns four">
           <h2>Hungry?</h2>
           <img src="images/clock-3x.png">
-          <p>Order food Near you or<br/> by your favorite Cuisine</p>
+          <p>Order food Near you or<br> by your favorite Cuisine</p>
 
         </div>
         <div class="columns four">
           <h2>Make a selection</h2>
           <img src="images/tap.png">
-          <p>Use our new Global Bites<br/>app to make your selection</p>
+          <p>Use our new Global Bites<br>app to make your selection</p>
           <a href="" class="button">Order Now</a> 
 
         </div>
         <div class="columns four">
           <h2>Fresh food delivered</h2>
           <img src="images/checked.png">
-          <p>Relax and enjoy great food<br/>with friends and family</p>
+          <p>Relax and enjoy great food<br>with friends and family</p>
 
         </div>
 
@@ -124,21 +124,25 @@
                   <a href="">Choose your city</a>
                 </li>
 
+                <li>
+                  <a href="">Become a member</a>
+                </li>
+
               </ul>
             </div>
             <div class="columns three">
               <h2>Connect</h2>
               <ul>
                 <li>
-                  <a href="">Facebook</a>
+                  <a class="Facebook" href="">Facebook</a>
                 </li>
 
                 <li>
-                  <a href="">Twitter</a>
+                  <a class="Twitter" href="">Twitter</a>
                 </li>
 
                 <li>
-                  <a href="">Instagram</a>
+                  <a class="Instagram" href="">Instagram</a>
                 </li>
               </ul>
             </div>
