add structure to download-app section

--- a/index.html
+++ b/index.html
@@ -52,13 +52,28 @@
   </section>
 
   <section class="download-app">
+        <div class="container">
+            <div class="row">
+                <div class="columns six">
+                    This is 50% column
+                </div>
+
+                <div class="columns three">
+                    This is 25% column
+                </div>
+
+                <div class="columns three">
+                    This is 25% column
+                </div>
+            </div>
+        </div>
 
   </section>
 
   <section class="infographic">
     <div class="container">
       <div class="row">
-        
+
         <div class="columns four">
           <h2>Hungry?</h2>
           <img src="images/clock-3x.png">
@@ -69,7 +84,7 @@
           <h2>Make a selection</h2>
           <img src="images/tap.png">
           <p>Use our new Global Bites<br>app to make your selection</p>
-          <a href="" class="button">Order Now</a> 
+          <a href="" class="button">Order Now</a>
 
         </div>
         <div class="columns four">
@@ -83,10 +98,10 @@
 
 
     </div>
-  
+
 
   </section>
-  
+
 <footer>
     <div class="container">
         <div class="row">
@@ -110,7 +125,7 @@
                   <a href="">FAQ</a>
                 </li>
               </ul>
-            
+
 
             </div>
             <div class="columns three">
