--- a/index.html
+++ b/index.html
@@ -55,15 +55,20 @@
         <div class="container">
             <div class="row">
                 <div class="columns six">
-                    This is 50% column
+                  <a href="" class="buttonpeople">Download the app Now</a>
+                  <p><strong>and begin enjoying fun time <br> with friends and family</strong></p> 
+
                 </div>
 
                 <div class="columns three">
-                    This is 25% column
+                    <img src="images/iOS_screen2.png" class="phone">
+                    
                 </div>
 
                 <div class="columns three">
-                    This is 25% column
+                    <img src="images/app-store-icon.png" class="apps">
+                    <img src="images/google-app-icon.png" class="apps">
+                   
                 </div>
             </div>
         </div>
@@ -89,7 +94,7 @@
         </div>
         <div class="columns four">
           <h2>Fresh food delivered</h2>
-          <img src="images/checked.png">
+          <img src="images/checked.png" class="check-icon">
           <p>Relax and enjoy great food<br>with friends and family</p>
 
         </div>
@@ -110,6 +115,7 @@
               <img src="images/app-store-icon.png">
               <img src="images/google-app-icon.png">
             </div>
+
             <div class="columns three">
               <h2>About</h2>
               <ul>
