--- a/index.html
+++ b/index.html
@@ -45,7 +45,33 @@
 
   </header>
 
-  <section class="hero"></section>
+  <section class="hero">
+        <div class="container">
+          <div class="row">
+            <div class="columns four">
+              <img src="images/logo_noline.png" class="logo">
+            </div>
+
+        <div class="columns six">
+              <h1>Tour the World</h1>
+              <p>One bite at a time, delivered to your doorstep</p>
+              <img src="images/dotted_line.png">
+              <a href="" class="button1">Address</a>
+              <a href="" class="button2">Find a foodtruck</a>
+              </div>
+
+
+        <div class="columns two">
+              <img src="images/food truck.png">
+
+
+
+
+        </div>
+      </div>
+
+
+  </section>
 
   <section class="photos">
 
