update hero section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/global-bites.css">
 
@@ -55,14 +56,12 @@
         <div class="columns six">
               <h1>Tour the World</h1>
               <p>One bite at a time, delivered to your doorstep</p>
-              <img src="images/dotted_line.png">
-              <a href="" class="button1">Address</a>
-              <a href="" class="button2">Find a foodtruck</a>
+              <input type="text" placeholder="address">
+              <a href="" class="button button-primary">Find a foodtruck</a>
               </div>
 
 
         <div class="columns two">
-              <img src="images/food truck.png">
 
 
 
@@ -82,19 +81,19 @@
             <div class="row">
                 <div class="columns six">
                   <a href="" class="buttonpeople">Download the app Now</a>
-                  <p><strong>and begin enjoying fun time <br> with friends and family</strong></p> 
+                  <p><strong>and begin enjoying fun time <br> with friends and family</strong></p>
 
                 </div>
 
                 <div class="columns three">
                     <img src="images/iOS_screen2.png" class="phone">
-                    
+
                 </div>
 
                 <div class="columns three">
                     <img src="images/app-store-icon.png" class="apps">
                     <img src="images/google-app-icon.png" class="apps">
-                   
+
                 </div>
             </div>
         </div>
