--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Raleway" rel="stylesheet" type="text/css">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -54,14 +54,18 @@
             </div>
 
         <div class="columns six">
-              <h1>Tour the World</h1>
+              <h1>Tour the world</h1>
               <p>One bite at a time, delivered to your doorstep</p>
+              <img src="images/line.png" class="line">
+              
               <input type="text" placeholder="address">
+              
               <a href="" class="button button-primary">Find a foodtruck</a>
               </div>
 
-
         <div class="columns two">
+              <img src="images/foodtruck.png" class="truck">
+              </div>
 
 
 
