--- a/index.html
+++ b/index.html
@@ -77,7 +77,27 @@
   </section>
 
   <section class="photos">
+        <div class="container">
+          <div class="row">
+            <div class="columns four">
+              <img src="images/foodleft.png" class="left">
+              <p>We partner with some of the best food<br>trucks in your local area, delivering fresh,
+              <br> unique food right to your doorstep.</p>
+            </div> 
 
+            <div class="columns four">
+              <img src="images/jerk-chicken_big.png" class="jerk">
+              <a href="" class="button">View Member foodtrucks</a>
+            </div>
+
+            <div class="columns four">
+              <img src="images/foodright.png" class="right">
+              <p id="textright">Using our new Global Bites app, it is<br> easy to find our member food trucks<br> near you or you can select by cuisine.</p>
+            </div>
+
+
+            </div>
+      </div>
   </section>
 
   <section class="download-app">
