--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <div class="columns four">
               <img src="images/jerk-chicken_big.png" class="jerk">
-              <a href="" class="button">View Member foodtrucks</a>
+              <a href="" class="buttonmember">View Member foodtrucks</a>
             </div>
 
             <div class="columns four">
