--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Global Bites</title>
+  <title>Global Bites- this is a food truck</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
