--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </div>
 
         <div class="columns two">
-              <img src="images/foodtruck.png" class="truck">
+              <img src="images/Foodtruck.png" class="truck">
               </div>
 
 
